# micrograd

./: .gitignore  LICENSE  README.md  pyproject.toml
micrograd/: example.py  micrograd.py  micrograd_test.py  nn.py  value.py  value_test.py
notebooks/: simple_mlp.ipynb
