[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = ""
authors = ["Anuar Talipov <anuartb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
notebook = "^7.1.2"
nbconvert = "^7.16.3"
matplotlib = "^3.8.3"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
